[gd_scene load_steps=7 format=3 uid="uid://630qfh2rdyov"]

[ext_resource type="Script" path="res://personagem.gd" id="1_8fe5j"]
[ext_resource type="PackedScene" uid="uid://dnyb5k4g0xo7q" path="res://robo.tscn" id="2_gmh5c"]
[ext_resource type="PackedScene" uid="uid://dg31wdjvfrq2w" path="res://fumaca.tscn" id="3_ikdxh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44p2h"]
radius = 16.0
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iiabc"]
size = Vector2(48, 83)

[sub_resource type="SystemFont" id="SystemFont_7qh2f"]
subpixel_positioning = 0

[node name="personagem" type="CharacterBody2D" groups=["personagem"]]
position = Vector2(479, 283)
script = ExtResource("1_8fe5j")
metadata/_edit_horizontal_guides_ = [333.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_44p2h")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1
metadata/_edit_lock_ = true

[node name="robo" parent="." instance=ExtResource("2_gmh5c")]
position = Vector2(-2, -7)
scale = Vector2(0.3, 0.3)

[node name="hitbox" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-2, -1.5)
shape = SubResource("RectangleShape2D_iiabc")
metadata/_edit_lock_ = true

[node name="ray_pulo" type="RayCast2D" parent="."]
position = Vector2(0, 46)
target_position = Vector2(0, 20)

[node name="label_pensamento" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -82.0
offset_top = -75.0
offset_right = 190.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = SubResource("SystemFont_7qh2f")
theme_override_font_sizes/font_size = 20
text = "Preciso da chave ..."

[node name="fumaca" parent="." instance=ExtResource("3_ikdxh")]
position = Vector2(2, -34)

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
